--- a/source/timemory/components/cuda/CMakeLists.txt
+++ b/source/timemory/components/cuda/CMakeLists.txt
@@ -11,7 +11,7 @@ if(TIMEMORY_USE_CUDA)
         NAME ${NAME}
         TARGET ${NAME}-component
         CATEGORY COMPONENT
-        FOLDER components
+        FOLDER ${CMAKE_INSTALL_LIBDIR}
         HEADERS ${header_files}
         SOURCES ${source_files}
         DEPENDS ${DEPS}
