--- a/source/timemory/components/cupti/CMakeLists.txt
+++ b/source/timemory/components/cupti/CMakeLists.txt
@@ -16,7 +16,7 @@ if(TIMEMORY_USE_CUPTI)
         NAME ${NAME}
         TARGET ${NAME}-component
         CATEGORY COMPONENT
-        FOLDER components
+        FOLDER ${CMAKE_INSTALL_LIBDIR}
         HEADERS ${header_files}
         SOURCES ${source_files}
         DEPENDS ${DEPS}
