--- a/source/timemory/components/user_bundle/CMakeLists.txt
+++ b/source/timemory/components/user_bundle/CMakeLists.txt
@@ -13,7 +13,7 @@ timemory_build_intermediate_library(
     NAME ${NAME}
     TARGET ${NAME}-component
     CATEGORY USER_BUNDLE
-    FOLDER components
+    FOLDER ${CMAKE_INSTALL_LIBDIR}
     HEADERS ${header_files}
     SOURCES ${source_files}
     PROPERTY_DEPENDS COMPONENT)
