--- a/source/timemory/components/roofline/CMakeLists.txt
+++ b/source/timemory/components/roofline/CMakeLists.txt
@@ -19,7 +19,7 @@ if(TIMEMORY_USE_PAPI OR TIMEMORY_USE_CUPTI)
         NAME ${NAME}
         TARGET ${NAME}-component
         CATEGORY COMPONENT
-        FOLDER components
+        FOLDER ${CMAKE_INSTALL_LIBDIR}
         HEADERS ${header_files}
         SOURCES ${source_files}
         DEPENDS ${DEPS}
