--- a/source/timemory/general/CMakeLists.txt
+++ b/source/timemory/general/CMakeLists.txt
@@ -8,7 +8,7 @@ timemory_build_intermediate_library(
     NAME ${folder_name}
     TARGET ${folder_name}
     CATEGORY GLOBAL
-    FOLDER components
+    FOLDER ${CMAKE_INSTALL_LIBDIR}
     HEADERS ${header_files}
     SOURCES ${source_files}
     PROPERTY_DEPENDS GLOBAL)
