--- a/source/timemory/containers/CMakeLists.txt
+++ b/source/timemory/containers/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(DEFINED TIMEMORY_BUILD_CONTAINERS AND NOT TIMEMORY_BUILD_CONTAINERS)
+    return()
+endif()
+
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
