--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: apt-fixes
           command: >
             apt-get update &&
-            apt-get install -y git ssh autoconf libtool
+            apt-get install -y git ssh autoconf libtool texinfo
       - checkout
       - run:
           name: conda-installation
