Windows shlwapi library
- timemory::timemory-shlwapi interface library for shlwapi library

--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -54,7 +54,7 @@ timemory_build_intermediate_library(
     TARGET core
     CATEGORY GLOBAL
     FOLDER ${CMAKE_INSTALL_LIBDIR}
-    DEPENDS timemory::timemory-libunwind)
+    DEPENDS timemory::timemory-libunwind $<TARGET_EXISTS:timemory::timemory-shlwapi>)
 
 # core
 add_subdirectory(environment)
