--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,9 +114,10 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j 1
+            python ./pyctest-runner.py -SF --pyctest-drop-site=my.cdash.org --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j 1
             --quick
             --build-libs shared
+            --dart
             --mpi
             --papi
             --gotcha
@@ -166,8 +167,9 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -F --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -T Start Update Configure
+            python ./pyctest-runner.py -SF --pyctest-drop-site=my.cdash.org --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -T Start Update Configure
             --build-libs shared
+            --dart
             --mpi
             --gotcha
             --tools mpip mallocp dyninst
@@ -219,9 +221,10 @@ jobs:
             source activate &&
             conda activate pyctest &&
             export CMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}:$(dirname $(dirname $(find /opt/software/ | grep 'cuda-' | grep 'cuda\.h$')))" &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
+            python ./pyctest-runner.py -SF --pyctest-drop-site=my.cdash.org --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
             --quick
             --build-libs shared
+            --dart
             --cuda
             --tools avail
             --cxx-standard=17
@@ -263,8 +266,13 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
-            --build-libs shared --python --tools avail timem --cxx-standard=17 --compile-time-perf ${HOME}/ctp
+            python ./pyctest-runner.py -SF --pyctest-drop-site=my.cdash.org --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
+            --build-libs shared
+            --dart
+            --python
+            --tools avail timem
+            --cxx-standard=17
+            --compile-time-perf ${HOME}/ctp
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_{CALIPER,COMPILER_INSTRUMENTATION}=OFF -DPYTHON_EXECUTABLE=$(which python) -DTIMEMORY_BUILD_PYTHON_{HATCHET,LINE_PROFILER}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
