YAML serialization support

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "external/libunwind"]
 	path = external/libunwind
 	url = https://github.com/jrmadsen/libunwind.git
+[submodule "external/yaml-cpp"]
+	path = external/yaml-cpp
+	url = https://github.com/jrmadsen/yaml-cpp.git
