--- a/source/tools/timemory-timem/CMakeLists.txt
+++ b/source/tools/timemory-timem/CMakeLists.txt
@@ -34,8 +34,9 @@ if(TIMEMORY_BUILD_TOOLS_LIBEXPLAIN)
         PATH_SUFFIXES lib lib64 lib32)
 
     if(LIBEXPLAIN_INCLUDE_DIR AND LIBEXPLAIN_LIBRARY)
+        timemory_target_compile_definitions(timem-libexplain INTERFACE
+                                            TIMEMORY_USE_LIBEXPLAIN)
         target_include_directories(timem-libexplain INTERFACE ${LIBEXPLAIN_INCLUDE_DIR})
-        target_compile_definitions(timem-libexplain INTERFACE TIMEMORY_USE_LIBEXPLAIN)
         target_link_libraries(timem-libexplain INTERFACE ${LIBEXPLAIN_LIBRARY})
     else()
         set(TIMEMORY_BUILD_TOOLS_LIBEXPLAIN OFF)
@@ -66,7 +67,8 @@ if(NOT DEFINED TIMEM_PAPI_TARGET OR NOT TIMEM_PAPI_TARGET)
         if(_USE_PAPI_STATIC)
             set(TIMEM_PAPI_TARGET PAPI::papi-static)
             set(_RPATH OFF)
-            target_compile_definitions(${TIMEM_PAPI_TARGET} INTERFACE TIMEMORY_USE_PAPI)
+            timemory_target_compile_definitions(${TIMEM_PAPI_TARGET} INTERFACE
+                                                TIMEMORY_USE_PAPI)
         else()
             set(TIMEM_PAPI_TARGET timemory::timemory-papi)
         endif()
