--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -195,3 +195,127 @@ jobs:
         run: |
           cmake -B build-examples -DTIMEMORY_BUILD_C_EXAMPLES=ON -Dtimemory_DIR=${HOME}/timemory-install/share/cmake/timemory .
           cmake --build build-examples --target ex_array_of_bundles --parallel 2
+
+  macos-dev-build:
+    runs-on: macos-latest
+    continue-on-error: false
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - BUILD_TYPE: 'Release'
+            BUILD_ARGS: '--build-libs shared --tools avail timem --cxx-standard=17'
+            CTEST_ARGS: '-V --output-on-failure'
+            CONFIG_ARGS: '-DTIMEMORY_BUILD_{CALIPER,COMPILER_INSTRUMENTATION}=OFF -DTIMEMORY_BUILD_PYTHON_{HATCHET,LINE_PROFILER}=OFF'
+            PYTHON_VERSION: '3.8'
+    steps:
+      - name: Setup Environment
+        run: |
+          echo "PATH=${HOME}/miniconda/bin:${PATH}" >> $GITHUB_ENV
+          echo "CMAKE_ARGS=-DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install -DTIMEMORY_SOCKET_TESTS=OFF ${{ matrix.CONFIG_ARGS }}" >> $GITHUB_ENV
+          echo "PYCTEST_ARGS=-SF --pyctest-drop-site=my.cdash.org --pyctest-model=Continuous --pyctest-site=GitHub -j 1 --compile-time-perf ${HOME}/ctp --pyctest-build-type=${{ matrix.BUILD_TYPE }} ${{ matrix.BUILD_ARGS }}" >> $GITHUB_ENV
+          env | sort
+
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          clean: true
+
+      - name: Install PyCTest
+        run: |
+          wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
+          bash miniconda.sh -b -p ${HOME}/miniconda
+          conda config --set always_yes yes --set changeps1 no
+          conda create -c defaults -c conda-forge -n pyctest python=${{ matrix.PYTHON_VERSION }} pyctest
+
+      - name: Install Requirements
+        run: |
+          source activate
+          conda activate pyctest
+          python -m pip install -r requirements.txt
+          python -m pip install pytest
+
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          clean: true
+
+      - name: Build and Test
+        run: |
+          export CONTINUOUS_INTEGRATION=true
+          source activate
+          conda activate pyctest
+          echo -e "Running command:\n$(which python) ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}"
+          python ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
+
+      - name: Update Log
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          for i in $(find Testing | grep LastUpdate); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Configure Log
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          for i in $(find Testing | grep LastConfigure); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Build Log
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          for i in $(find Testing | grep LastBuild); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Test Log
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          for i in $(find Testing | grep LastTest); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Validate Build
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          source activate
+          conda activate pyctest
+          cmake --build . --target all --parallel $(nproc)
+
+      - name: Test Install
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          source activate
+          conda activate pyctest
+          cmake --build . --target install --parallel $(nproc)
+
+      - name: Validate Tests
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -n "$(find Testing | grep LastTestsFailed.log)" ]; then
+              ctest --rerun-failed -V -N;
+              ctest --rerun-failed -V;
+          fi
+
+      - name: Test Python Build
+        if: ${{ matrix.BUILD_TYPE != 'Debug' }}
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -f "tests/test-python-install-import.cmake" ]; then
+            cmake -P tests/test-python-install-import.cmake;
+            PYTHONPATH=. $(which pytest) -s;
+          fi
+
+      - name: Import Python Install
+        working-directory: ${{github.workspace}}/build-timemory/Darwin
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -f "tests/test-python-install-import.cmake" ]; then
+            cd;
+            export PYTHONPATH="${HOME}/timemory-install/lib/python${{ matrix.PYTHON_VERSION }}/site-packages:${PYTHONPATH}"
+            python -c "import timemory; print(timemory.__file__)";
+          fi
+
+      - name: Test Examples
+        working-directory: ${{github.workspace}}/examples
+        run: |
+          cmake -B build-examples -DTIMEMORY_BUILD_C_EXAMPLES=ON -Dtimemory_DIR=${HOME}/timemory-install/share/cmake/timemory .
+          cmake --build build-examples --target ex_array_of_bundles --parallel 2
