--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: apt-fixes
           command: >
             apt-get update &&
-            apt-get install -y git ssh autoconf libtool texinfo
+            apt-get install -y git ssh autoconf libtool texinfo zlib1g-dev
       - checkout
       - run:
           name: conda-installation
@@ -126,7 +126,7 @@ jobs:
             --cxx-standard=17
             --compile-time-perf ${HOME}/ctp
             -- -V --output-on-failure
-            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DTIMEMORY_UNITY_BUILD=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
@@ -164,6 +164,7 @@ jobs:
           command: >
             export CTEST_PARALLEL_LEVEL=2 &&
             export CONTINUOUS_INTEGRATION=true &&
+            export TIMEMORY_TEST_SKIP="mpi_tests.send_recv_overflow" &&
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
@@ -297,5 +298,5 @@ workflows:
       - python-install
       - quick-build
       - cpu-dev-build
-      - gpu-dev-build
+      # - gpu-dev-build
       # - macos-dev-build
