--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,11 @@ if(NOT CMAKE_VERSION VERSION_LESS 3.14)
     cmake_policy(SET CMP0082 NEW)
 endif()
 if(NOT CMAKE_VERSION VERSION_LESS 3.18)
-    cmake_policy(SET CMP0104 OLD)
+    if(CMAKE_VERSION VERSION_LESS 3.27.6)
+        cmake_policy(SET CMP0104 OLD)
+    else()
+        set(CMAKE_CUDA_ARCHITECTURES OFF)
+    endif()
 endif()
 if(POLICY CMP0135)
     cmake_policy(SET CMP0135 NEW) # DOWNLOAD_EXTRACT_TIMESTAMP
