--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -206,7 +206,7 @@ jobs:
           - BUILD_TYPE: 'Release'
             BUILD_ARGS: '--build-libs shared --tools avail timem --cxx-standard=17'
             CTEST_ARGS: '-V --output-on-failure'
-            CONFIG_ARGS: '-DTIMEMORY_BUILD_{CALIPER,COMPILER_INSTRUMENTATION}=OFF -DTIMEMORY_BUILD_PYTHON_{HATCHET,LINE_PROFILER}=OFF'
+            CONFIG_ARGS: '-DTIMEMORY_BUILD_{CALIPER,COMPILER_INSTRUMENTATION}=OFF -DTIMEMORY_BUILD_PYTHON_HATCHET=OFF'
             PYTHON_VERSION: '3.8'
     steps:
       - name: Setup Environment
