Fix IO component install on macOS

--- a/source/timemory/components/io/CMakeLists.txt
+++ b/source/timemory/components/io/CMakeLists.txt
@@ -1,18 +1,19 @@
-if(APPLE)
-    return()
-endif()
-
+#
 set(NAME io)
 
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-timemory_build_intermediate_library(
-    USE_INTERFACE
-    NAME ${NAME}
-    TARGET ${NAME}-component
-    CATEGORY COMPONENT
-    FOLDER ${CMAKE_INSTALL_LIBDIR}
-    HEADERS ${header_files}
-    SOURCES ${source_files}
-    PROPERTY_DEPENDS GLOBAL)
+if(APPLE)
+    timemory_install_header_files(${header_files} ${source_files})
+else()
+    timemory_build_intermediate_library(
+        USE_INTERFACE
+        NAME ${NAME}
+        TARGET ${NAME}-component
+        CATEGORY COMPONENT
+        FOLDER ${CMAKE_INSTALL_LIBDIR}
+        HEADERS ${header_files}
+        SOURCES ${source_files}
+        PROPERTY_DEPENDS GLOBAL)
+endif()
