--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,7 @@ name: continuous-integration
 
 on:
   push:
-    branches: [ master, develop, omnitrace, omnitrace-causal ]
+    branches: [ master, develop, omnitrace ]
   pull_request:
     branches: [ master, develop, omnitrace ]
 
@@ -77,6 +77,149 @@ jobs:
             BUILD_ARGS: '--minimal --build-libs shared --python --arch --extra-optimizations --caliper --unwind --cxx-standard=17'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
+
+    env:
+      CC: ${{ matrix.CC }}
+      FC: ${{ matrix.FC }}
+      CXX: ${{ matrix.CXX }}
+      CTEST_ARGS: "${{ matrix.CTEST_ARGS }}"
+
+    steps:
+      - name: Setup Environment
+        run: |
+          echo "PATH=${HOME}/miniconda/bin:${PATH}" >> $GITHUB_ENV
+          echo "CMAKE_ARGS=-DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install -DTIMEMORY_SOCKET_TESTS=OFF ${{ matrix.CONFIG_ARGS }}" >> $GITHUB_ENV
+          echo "PYCTEST_ARGS=-SF --pyctest-drop-site=my.cdash.org --pyctest-model=Continuous --pyctest-site=GitHub -j 1 --compile-time-perf ${HOME}/ctp -cc ${{ matrix.CC }} -cxx ${{ matrix.CXX }} --pyctest-build-type=${{ matrix.BUILD_TYPE }} ${{ matrix.BUILD_ARGS }}" >> $GITHUB_ENV
+          env | sort
+
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          clean: true
+
+      - name: Update container
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ${{ matrix.PACKAGES }}
+          sudo scripts/linux-ci.sh
+
+      - name: Install PyCTest
+        run: |
+          wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+          bash miniconda.sh -b -p ${HOME}/miniconda
+          conda config --set always_yes yes --set changeps1 no
+          conda create -c conda-forge -c defaults -n pyctest python=${{ matrix.PYTHON_VERSION }} pyctest
+
+      - name: Install Requirements
+        run: |
+          source activate
+          conda activate pyctest
+          python -m pip install -r requirements.txt
+          python -m pip install pytest
+
+      - name: Build and Test
+        run: |
+          source activate
+          conda activate pyctest
+          echo -e "Running command:\n$(which python) ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}"
+          python ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
+
+      - name: Update Log
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          for i in $(find Testing | grep LastUpdate); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Configure Log
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          for i in $(find Testing | grep LastConfigure); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Build Log
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          for i in $(find Testing | grep LastBuild); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Test Log
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          for i in $(find Testing | grep LastTest); do echo "##### File: ${i} #####"; cat ${i}; done
+
+      - name: Validate Build
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          source activate
+          conda activate pyctest
+          cmake --build . --target all --parallel $(nproc)
+
+      - name: Test Install
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          source activate
+          conda activate pyctest
+          cmake --build . --target install --parallel $(nproc)
+
+      - name: Validate Tests
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -n "$(find Testing | grep LastTestsFailed.log)" ]; then
+              ctest --rerun-failed -V -N;
+              ctest --rerun-failed -V;
+          fi
+
+      - name: Test Python Build
+        if: ${{ matrix.BUILD_TYPE != 'Debug' }}
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -f "tests/test-python-install-import.cmake" ]; then
+            cmake -P tests/test-python-install-import.cmake;
+            PYTHONPATH=. $(which pytest) -s;
+          fi
+
+      - name: Import Python Install
+        working-directory: ${{github.workspace}}/build-timemory/Linux
+        run: |
+          source activate
+          conda activate pyctest
+          if [ -f "tests/test-python-install-import.cmake" ]; then
+            cd;
+            export PYTHONPATH="${HOME}/timemory-install/lib/python${{ matrix.PYTHON_VERSION }}/site-packages:${PYTHONPATH}"
+            python -c "import timemory; print(timemory.__file__)";
+          fi
+
+      - name: Test Examples
+        working-directory: ${{github.workspace}}/examples
+        run: |
+          cmake -B build-examples -DTIMEMORY_BUILD_C_EXAMPLES=ON -Dtimemory_DIR=${HOME}/timemory-install/share/cmake/timemory .
+          cmake --build build-examples --target ex_array_of_bundles --parallel 2
+
+  linux-ci-latest:
+    runs-on: ubuntu-latest
+    continue-on-error: false
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - CC: clang
+            CXX: clang++
+            PYTHON_VERSION: '3.10'
+            BUILD_TYPE: 'Release'
+            PACKAGES: 'clang build-essential ccache graphviz'
+            BUILD_ARGS: '--minimal --build-libs shared --mpi --python --gotcha --unwind --stats --tools avail timem --cxx-standard=17'
+            CTEST_ARGS: '-V --output-on-failure'
+            CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_UNITY_BUILD=OFF -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
+          - CC: gcc
+            CXX: g++
+            FC: gfortran
+            PYTHON_VERSION: '3.10'
+            BUILD_TYPE: 'Release'
+            PACKAGES: 'gcc g++ gfortran build-essential ccache graphviz'
+            BUILD_ARGS: '--minimal --build-libs shared --mpi --python --gotcha --unwind --stats --tools avail timem --cxx-standard=17'
+            CTEST_ARGS: '-V --output-on-failure'
+            CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_UNITY_BUILD=OFF -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
 
     env:
       CC: ${{ matrix.CC }}
